# easy-gpt

./: .env  .gitignore  main.py  pyproject.toml  readme.md  start.sh
docs/: dev.md
prompts/1012/: consult.prompt  control.prompt  diagnosis.prompt  knowledge.prompt
src/: call-chatgpt.py  config.py  core.py  models.py  schema.py
src/config/: prompts.py
src/lib/: log.py  parser.py  path.py  secret.py
src/libs/: log.py
src/schema/: openai.py
test/: parser.py  system.prompt  test-super-agent.json
